name:                wyas
version:             0.1
synopsis:            Write yourself a scheme implementation
description:         Write yourself a scheme implementation
homepage:            https://github.com/nagyf/wyas
license:             MIT
license-file:        LICENSE
author:              nagyf
maintainer:          jester.nf@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable wyas
  main-is:             Main.hs
  other-extensions:    ExistentialQuantification
  build-depends:       base >=4.6 && <4.7, parsec >=3.1 && <3.2, mtl >=2.1 && <2.2
  hs-source-dirs:      src
  default-language:    Haskell2010
